--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,45 @@
 
 /* Your CSS Code here. */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+table,th,td{
+	border: 1px solid black;
+	border-collapse:collapse;
+	font-family: 'Roboto', sans-serif;
+}
+table{
+	width:100%;
+}
+.heading{
+	background-color:#c0504dff;
+	color:white;
+	text-align:left;
+	
+}
+.waist{
+	background-color:#da9694ff;
+	color:white;
+}
+
+.chest{
+		background-color:#f2dcdbff;
+}
+.sleeve{
+		background-color:#d9d9d9ff;
+}
+ td:first-child {
+	text-align:left;
+}
+tr{
+	text-align:right;	
+}
+
+
+
+
+
+
+
+
+
+
+
